-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Server Security
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
Uninitialized pointer field
The pointer field will point to an arbitrary memory location, any attempt to write may cause corruption. A pointer field is not initialized in the constructor
/data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/transport/grpc/async_client_factory.h:203: UNINIT_CTOR 171771 Class member declaration for "_svcCtx".
/data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/transport/grpc/async_client_factory.cpp:53: UNINIT_CTOR 171771 Non-static class member "_svcCtx" is not initialized in this constructor nor in any functions that it calls.
/data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/transport/grpc/async_client_factory.h:204: UNINIT_CTOR 171771 Class member declaration for "_tl".
/data/mci/8df2c396557fb87fa29efdf21060b868/bazel_cache/18545ad5d47fdc81034b726533d3cf62/execroot/_main_/src/mongo/transport/grpc/async_client_factory.cpp:53: UNINIT_CTOR 171771 Non-static class member "_tl" is not initialized in this constructor nor in any functions that it calls.