SERVER-102231  Setting default values for naked pointers data members (#33684)

GitOrigin-RevId: f10b840f49829511f2593c6b50bf71a76f70e9bc